--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,4 +10,4 @@ $light-grayish-blue:hsl(223, 64%, 98%);
 $white:hsl(0, 0%, 100%);
 
 //lightbox background
-$black:hsla(0, 0%, 0%, 75%);
+$black:hsla(0, 0%, 0%, .7);
