--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -1,15 +1,57 @@
-.carousel {
-  display: flex;
-  flex-direction: row;
-  overflow: hidden;
+.slide {
+  width: 117%;
+  margin-left: -24px;
+  opacity: 0;
+  transition: 0.3s ease-in;
+}
+.slide img {
+  width: 100%;
 }
 
-.carousel img {
-  width: 100%;
+.slide.active {
+  opacity: 1;
+  transition: 0.3s ease-in;
+}
+
+.carousel-container {
+  position: relative;
+}
+.carousel-container ul {
+  position: absolute;
+  top: 50%;
+}
+.carousel-container ul li {
+  background: white;
+  padding-block: 5px;
+  padding-inline: 7px;
+  border-radius: 50%;
+  width: 15px;
+  z-index: 2;
+}
+.carousel-container ul li:nth-of-type(1) {
+  position: absolute;
+  left: 0px;
+}
+.carousel-container ul li:nth-of-type(2) {
+  position: absolute;
+  margin-left: 260px;
+}
+.carousel-container .thumbnail {
+  display: none;
 }
 
 @media screen and (min-width: 800px) {
   .carousel-container ul {
     display: none;
+  }
+  .carousel-container .thumbnail {
+    display: block;
+  }
+  .carousel-container .main-img {
+    border-radius: 10px;
+  }
+  .slide {
+    width: 100%;
+    margin-left: auto;
   }
 }/*# sourceMappingURL=carousel.css.map */
