did some UI changes

--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -45,7 +45,14 @@
     display: none;
   }
   .carousel-container .thumbnail {
-    display: block;
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    gap: 5px;
+    margin-top: 20px;
+  }
+  .carousel-container .thumbnail img {
+    width: 90%;
+    border-radius: 10px;
   }
   .carousel-container .main-img {
     border-radius: 10px;
