--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -2,8 +2,9 @@
   width: 100%;
 }
 
-.home h3 {
+.home h4 {
   color: hsl(26deg, 100%, 55%);
+  font-size: 14px;
 }
 .home h2 {
   color: hsl(220deg, 13%, 13%);
@@ -46,6 +47,12 @@
   text-align: center;
   width: 100%;
 }
+.qty-order .cart-icon {
+  position: absolute;
+  width: 20px;
+  margin-left: -30px;
+  margin-top: -1px;
+}
 .qty-order ul li {
   display: inline-flex;
 }
@@ -67,9 +74,10 @@
   background-color: hsl(26deg, 100%, 55%);
   color: white;
   border: 1px solid hsl(26deg, 100%, 55%);
-  border-radius: 3px;
-  padding: 10px;
+  border-radius: 6px;
+  padding: 15px;
   margin-bottom: 20px;
+  box-shadow: 0px, 5px, 0px, hsl(25deg, 100%, 94%);
 }
 
 @media screen and (min-width: 800px) {
@@ -83,7 +91,7 @@
     margin-bottom: 40px;
   }
   .home-wrapper .home {
-    margin-top: 30px;
+    margin-top: 40px;
   }
   .home-wrapper .home h1 {
     font-size: 40px;
@@ -103,6 +111,7 @@
     display: grid;
     gap: 10px;
     grid-template-columns: 50% 50%;
+    padding-top: 40px;
   }
   .home-wrapper .home .qty-order li:nth-of-type(3) {
     right: 52%;
@@ -110,6 +119,8 @@
   }
   .home-wrapper .home .qty-order button {
     margin-bottom: 0px;
+    border-radius: 10px;
+    padding: 10px;
   }
   .home-wrapper .home .qty-order button:hover {
     opacity: 0.7;
