--- a/src/styles/sidenav.css
+++ b/src/styles/sidenav.css
@@ -19,7 +19,7 @@
     background: hsla(0deg, 0%, 0%, 0.7);
     z-index: 5;
     width: 100vw;
-    height: 160vh;
+    height: 155%;
     transition: 0.3s ease;
   }
   .overlay.active {
@@ -32,7 +32,7 @@
     top: 0px;
     background: hsl(0deg, 0%, 100%);
     width: 50%;
-    height: 155vh;
+    height: 97%;
     padding: 5px;
     padding-top: 15px;
     left: 0px;
