--- a/src/styles/sidenav.scss
+++ b/src/styles/sidenav.scss
@@ -25,7 +25,7 @@
         background: $black;
         z-index: 5;
         width: 100vw;
-        height: 160vh;
+        height: 155%;
         transition: .3s ease;
     }
 
@@ -40,7 +40,7 @@
         top:0px;
         background: $white;
         width: 50%;
-        height: 155vh;
+        height: 97%;
         padding: 5px;
         padding-top: 15px;
         left: 0px;
