--- a/src/styles/carousel.scss
+++ b/src/styles/carousel.scss
@@ -2,49 +2,39 @@
     width: 117%;
     margin-left: -24px;
     opacity: 0;
-    transition: .3s ease-in;
+    transition: .1s ease-in;
 
     img{
         width: 100%;
-    }
-
-    
+    } 
 }
 
 .slide.active{
     opacity: 1;
-    transition: .3s ease-in;
+    transition: .1s ease-in;
 }
 
 .carousel-container{
     position: relative;
 
-    ul {
+    li{
+        background: white;
         position: absolute;
-        top: 50%;
-
-        li{
-            background: white;
-            
-            padding-block: 5px;
-            padding-inline: 7px;
-            border-radius: 50%;
-            width: 15px;
-            z-index: 2;
-        }
-
-        li:nth-of-type(1){
-            position: absolute;
-            left: 0px;
-        }
-
-        li:nth-of-type(2){
-            position: absolute;
-            margin-left: 260px;
-        }
-
-        
+        padding-block: 5px;
+        padding-inline: 7px;
+        border-radius: 50%;
+        width: 13px;
+        top: 45%;
+        z-index: 2;
     }
+
+    .left{
+        left: -10px;
+    }
+    .right{
+        right: -10px;
+    }
+
 
     .thumbnail{
         display: none;
@@ -54,14 +44,14 @@
 
 @media screen and (min-width:800px) {
     .carousel-container{
-        ul{
+        li{
             display: none;
         }
         .thumbnail{
             display: grid;
             grid-template-columns: 25% 25% 25% 25%;
             gap: 5px;
-            margin-top: 20px;
+            margin-top: -90px;
             
             img{
                 width: 90%;
