--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -80,7 +80,7 @@
   border-radius: 6px;
   padding: 15px;
   margin-bottom: 20px;
-  box-shadow: 0px, 5px, 0px, hsl(25deg, 100%, 94%);
+  box-shadow: 5px 5px 10px rgb(247, 157, 39);
 }
 
 @media screen and (min-width: 800px) {
