--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -40,9 +40,11 @@
                 position: absolute;
                 right: 80px;
                 top: 30px;
+                cursor: pointer;
             }
         }
     }
+    
 }
 
 
