--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -102,7 +102,7 @@
         border-radius: 6px;
         padding: 15px;
         margin-bottom: 20px;
-        box-shadow:0px, 5px, 0px, $pale-orange;
+        box-shadow:5px 5px 10px rgb(247, 157, 39);
     }
 }
 
