--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -19,8 +19,7 @@
         top: 100px;
         left: auto;
         width: 400px;
-        box-shadow: 2px 5px 4px $dark-grayish-blue
-
+        box-shadow: 0px 5px 10px 2px $grayish-blue;
     }
 
     .product-img{
