--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -21,6 +21,12 @@
   color: hsl(0deg, 0%, 100%);
   text-align: center;
 }
+@media screen and (min-width: 800px) {
+  .header .cart-count {
+    right: 55px;
+    margin-top: 22px;
+  }
+}
 .header .cart-count p {
   margin-top: -3px;
 }
@@ -54,9 +60,5 @@
   }
   .header ul li:nth-of-type(3) {
     right: 60px;
-  }
-  .header .cart-count {
-    right: 55px;
-    margin-top: 22px;
   }
 }/*# sourceMappingURL=header.css.map */
