Modified modal overlay

--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -1,7 +1,7 @@
 .modal-overlay {
-  position: absolute;
-  top: -177px;
-  left: -130px;
+  position: fixed;
+  top: 0px;
+  left: 0px;
   background: hsla(0deg, 0%, 0%, 0.7);
   width: 94.5vw;
   height: 120vh;
