--- a/src/styles/sidenav.css
+++ b/src/styles/sidenav.css
@@ -6,6 +6,7 @@
 }
 .side-nav ul li {
   margin: auto 20px;
+  cursor: pointer;
 }
 .side-nav ul li:nth-of-type(1) {
   display: none;
@@ -13,13 +14,13 @@
 
 @media screen and (max-width: 500px) {
   .overlay {
-    position: absolute;
+    position: fixed;
     top: 0px;
     left: -400px;
     background: hsla(0deg, 0%, 0%, 0.7);
     z-index: 5;
-    width: 100vw;
-    height: 155%;
+    width: 100%;
+    height: 100%;
     transition: 0.3s ease;
   }
   .overlay.active {
