--- a/src/styles/sidenav.scss
+++ b/src/styles/sidenav.scss
@@ -5,10 +5,12 @@
     top: 13px;
     left: 130px;
     color: $dark-grayish-blue;
+    
 
     ul{
         li{
             margin: auto 20px;
+            cursor: pointer;
 
             &:nth-of-type(1){
                 display: none;
@@ -19,13 +21,13 @@
 
 @media screen and (max-width:500px) {
     .overlay{
-        position: absolute;
+        position:fixed;
         top: 0px;
         left: -400px;
         background: $black;
         z-index: 5;
-        width: 100vw;
-        height: 155%;
+        width: 100%;
+        height: 100%;
         transition: .3s ease;
     }
 
@@ -44,6 +46,7 @@
         padding: 5px;
         padding-top: 15px;
         left: 0px;
+        
 
 
         ul li{
