--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -7,17 +7,71 @@
     font-family: $kumbhsans;
 }
 
+body {
+    height: 100vh;
+}
+
 .container {
     width: 100%;
-    padding-inline: 3em;
     position: relative;
     height: 100lvh;
-    margin-top: 1em;
+    padding-inline: 20px;
 
     .navbar {
         background: $white;
         color: black;
         box-shadow: none;
+
+        @include responsive('mobile') {
+            .topright {
+                margin-left: 60px;
+            }
+            .badge {
+                margin-right: -55px;
+            }
+            .cart {
+                position: absolute;
+                right: 50px;
+            }
+        }
+
+        .avatar {
+            width: 35px;
+        }
+
+        .menu {
+           margin-right: 20px;
+           margin-left: -20px;
+        }
+
+        .badge {
+            color: $white;
+            background: $orange;
+            padding: 4px;
+            border-radius: 100%;
+            width: 20px; height: 20px;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+            right: 6em;
+            margin-top: -10px;
+        }
+
+        @include responsive('desktop') {
+            padding-bottom: 15px;
+            margin-bottom: 10px;
+            border-bottom: 1px solid $dark-grayishblue;
+            display: block;
+            padding-inline: 3em;
+
+            .avatar {
+                width: 50px;
+            }
+
+            .menu {
+                display: none;
+            }
+        }
 
         .logo {
             margin-right: 2em;
@@ -27,6 +81,10 @@
             display: inline-flex;
             flex: 1;
             list-style: none;
+
+            @include responsive('mobile') {
+                display: none;
+            }
 
             li {
                 margin-right: 3rem;
@@ -48,24 +106,121 @@
                 font-weight: bold;
                 margin: 1em auto;
             }
+
+            h3 {
+                font-weight: bolder;
+            }
+
+            @include responsive('mobile'){
+                h3 {
+                    font-size: 30px;
+                }
+
+                .pricing {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    width: 95%;
+                    padding-block: 5px;
+                }
+            }
+            
         }
-        
-        .carousel {
-            width: 400PX;
-            border: 2px solid red;
+
+        .thumbnail {
+            display: none;
         }
 
         @include responsive('desktop') {
             display: flex;
+            justify-content: space-between;
             padding-inline: 80px;
-            // justify-content: space-between;
+
+            img {
+                border-radius: 15px;
+            }
+
+            .carousel {
+                display: none;
+            }
+
+            .thumbnail {
+                display: block;
+                width: 100%;
+
+                .bottom {
+                    width: 100%;
+                    margin-left: 1em;
+                    margin-top: 20px;
+
+                    img {
+                        width: 100%; height:100%;
+                        object-fit: cover;
+                    }
+                }
+            }
 
             .right {
-                width: 50%;
-                margin-left: 40px;
-                border: 1px solid purple;
+                margin-left: 5em;
                 padding-top: 2em;
             }
         }
+
+        .cta {
+            width: 95%;
+            // padding-block: 30px;
+
+            .btn {
+                background: $orange;
+                color: $white;
+                box-shadow: none;
+                width: 100%;
+                border-radius: 10px;
+
+                @include responsive('mobile') {
+                    margin-top: 1em;
+                    padding-block: 15px;
+                }
+            }
+
+            .counter {
+                background: $light-grayishblue;
+                padding: 13px;
+                border-radius: 10px;
+                font-weight: bold;
+                justify-content: space-between;
+            }
+
+            @include responsive('desktop') {
+                display: flex;
+                flex-flow: row;
+                margin-top: 2em;
+
+                .btn {
+                    width: 70%;
+                    padding-inline: 40px;
+                    margin-left: 20px;
+                    text-transform: capitalize;
+                }
+
+                .counter {
+                    width: 30%;
+                }
+
+            }
+        }
+
+        .discount {
+            background: $pale-orange;
+            color: $orange;
+            padding: 3px;
+            border-radius: 5px;
+        }
+
+        .content-text {
+            color:$grayishblue;
+        }
+
+        
     }
 }
