--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -26,17 +26,13 @@ body {
 }
 @media screen and (max-width: 425px) {
   .container .navbar .topright {
-    margin-left: 60px;
+    margin-left: 5.5em;
   }
-  .container .navbar .topright .avatar {
-    margin-left: 70px;
+  .container .navbar .topright .cart {
+    margin-right: -1em;
   }
   .container .navbar .badge {
-    margin-right: -47px;
-  }
-  .container .navbar .cart {
-    position: absolute;
-    right: 60px;
+    margin-right: -3.2em;
   }
 }
 .container .navbar .avatar {
@@ -44,7 +40,7 @@ body {
 }
 .container .navbar .menu {
   margin-right: 20px;
-  margin-left: -20px;
+  margin-left: -15px;
 }
 .container .navbar .badge {
   color: hsl(0, 0%, 100%);
@@ -125,7 +121,7 @@ body {
   .container .main {
     display: flex;
     justify-content: space-between;
-    padding-inline: 80px;
+    padding-inline: 7em;
   }
   .container .main img {
     border-radius: 15px;
@@ -155,19 +151,7 @@ body {
 }
 .container .main .cta {
   width: 95%;
-}
-.container .main .cta .btn {
-  background: hsl(26, 100%, 55%);
-  color: hsl(0, 0%, 100%);
-  box-shadow: none;
-  width: 100%;
-  border-radius: 10px;
-}
-@media screen and (max-width: 425px) {
-  .container .main .cta .btn {
-    margin-top: 1em;
-    padding-block: 15px;
-  }
+  margin-bottom: 10px;
 }
 .container .main .cta .counter {
   background: hsl(223, 64%, 98%);
@@ -186,7 +170,6 @@ body {
     width: 70%;
     padding-inline: 40px;
     margin-left: 20px;
-    text-transform: capitalize;
   }
   .container .main .cta .counter {
     width: 30%;
@@ -201,7 +184,7 @@ body {
 .container .main .content-text {
   color: hsl(220, 14%, 75%);
 }
-.container .main .arrows {
+.container .main .carousel .arrows {
   position: absolute;
   z-index: 2;
   margin-top: 50%;
@@ -211,8 +194,59 @@ body {
   justify-content: space-between;
   align-items: center;
 }
-.container .main .arrows img {
+.container .main .carousel .arrows img {
   background: hsl(0, 0%, 100%);
   padding: 10px 13px;
   border-radius: 100%;
+}
+.container .product-cart {
+  position: absolute;
+  top: 5em;
+  z-index: 3;
+  background: hsl(0, 0%, 100%);
+  width: 90%;
+  border-radius: 10px;
+  height: 270px;
+}
+.container .product-cart .row {
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  margin-bottom: 1em;
+}
+.container .product-cart .row .image {
+  width: 20%;
+  border-radius: 0.5em;
+}
+@media screen and (min-width: 426px) {
+  .container .product-cart {
+    width: 30%;
+    right: 10px;
+  }
+}
+.container .product-cart .cart-head {
+  padding: 1.5em 2em;
+}
+.container .product-cart .cart-content {
+  padding: 15px 2em;
+}
+.container .product-cart h6 {
+  font-weight: bold;
+}
+.container .btn {
+  background: hsl(26, 100%, 55%);
+  color: hsl(0, 0%, 100%);
+  box-shadow: none;
+  width: 100%;
+  border-radius: 10px;
+  text-transform: capitalize;
+}
+.container .btn:hover {
+  background: hsl(26, 100%, 55%);
+}
+@media screen and (max-width: 425px) {
+  .container .btn {
+    margin-top: 1em;
+    padding-block: 15px;
+  }
 }
