cart show-hide fix

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -187,7 +187,7 @@ body {
 .container .main .carousel .arrows {
   position: absolute;
   z-index: 2;
-  margin-top: 50%;
+  margin-top: 35%;
   list-style: none;
   display: inline-flex;
   width: 95%;
@@ -207,6 +207,8 @@ body {
   width: 90%;
   border-radius: 10px;
   height: 270px;
+  align-items: center;
+  display: none;
 }
 .container .product-cart .row {
   display: flex;
