lighthouse component and warning fix

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -252,3 +252,11 @@ body {
     padding-block: 15px;
   }
 }
+.container .box-overlay {
+  display: flex;
+  flex-flow: row;
+  width: 50%;
+}
+.container .box-overlay div {
+  width: 50%;
+}
